사용자 권한 부여 Test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,12 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.thymeleaf.cache=false
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=/Users/hongchan-yeong/Desktop/2?? ?????
+spring.servlet.multipart.location=/Users/hongchan-yeong/Desktop/
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 logging.level.org.springframework.security.web=trace
 logging.level.org.zerock=debug
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
