--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 #spring.security.user.name=user
 #spring.security.user.password=1234
 
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
+#
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3309/newDB?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#
+#spring.jpa.show.sql = true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.format_sql = true
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3309/newDB?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1234
-
-spring.jpa.show.sql = true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.format_sql = true
+spring.profiles.include=oauth
 
 spring.thymeleaf.cache=false
 
@@ -24,4 +26,15 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 logging.level.org.springframework.security.web=trace
 logging.level.org.zerock=debug
 
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.generate-ddl=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/MyssgDB?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.show.sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.hibernate.ddl-auto=update
+
