--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   data:
     web:
@@ -10,7 +13,7 @@ spring:
       max-file-size: 50MB
       ## h2 DB
   datasource:
-      url: jdbc:h2:~/test
+      url: jdbc:h2:tcp://localhost/~/test
       driver-class-name: org.h2.Driver
       username: sa
       password:
